--- a/common/src/main/resources/assets/ironchests/lang/uk_ua.json
+++ b/common/src/main/resources/assets/ironchests/lang/uk_ua.json
@@ -4,14 +4,6 @@
   "item.key.keychest": "%s : [X=%d, Y=%d, Z=%d]",
   "item.key.keyring.desc": "Ключі:",
   "item.dolly.chestid": "Скриня: %s",
-  "container.chest.dirt": "Ґрунтова скриня",
-  "container.chest.copper": "Мідна скриня",
-  "container.chest.iron": "Залізна скриня",
-  "container.chest.gold": "Золота скриня",
-  "container.chest.diamond": "Діамантова скриня",
-  "container.chest.crystal": "Кришталева скриня",
-  "container.chest.obsidian": "Обсидіанова скриня",
-  "container.chest.netherite": "Незеритова скриня",
   "block.ironchests.dirt_chest": "Ґрунтова скриня",
   "block.ironchests.copper_chest": "Мідна скриня",
   "block.ironchests.iron_chest": "Залізна скриня",
@@ -20,6 +12,15 @@
   "block.ironchests.crystal_chest": "Кришталева скриня",
   "block.ironchests.obsidian_chest": "Обсидіанова скриня",
   "block.ironchests.netherite_chest": "Незеритова скриня",
+
+  "block.ironchests.copper_barrel": "Мідна бочка",
+  "block.ironchests.iron_barrel": "Залізна бочка",
+  "block.ironchests.gold_barrel": "Золота бочка",
+  "block.ironchests.diamond_barrel": "Діамантова бочка",
+  "block.ironchests.crystal_barrel": "Кришталева бочка",
+  "block.ironchests.obsidian_barrel": "Обсидіанова бочка",
+  "block.ironchests.netherite_barrel": "Незеритова бочка",
+
   "item.ironchests.key": "Ключ",
   "item.ironchests.key_ring": "Кільце для ключів",
   "item.ironchests.lock": "Замок",
